fixed search bug & code align bug

--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -163,3 +163,8 @@ pre
   .keyword
   .javascript .function
     color: highlight-purple
+
+//修复mdui1.0.0导致的代码块居中
+figure, .highlight {
+  text-align: unset !important;
+}
